# learning

./: README.md
bash/: CLAUDE.md
bash/arrays/: basics.sh
bash/control_flow/: case.sh  conditionals.sh  loops.sh
bash/dotfiles/: DOTFILES.md  example.bashrc
bash/file_ops/: find_grep.sh  redirection.sh
bash/functions/: basics.sh  recursion.sh
bash/process/: jobs_subshells.sh  signals_traps.sh
bash/scripting/: arguments.sh  quoting.sh  variables.sh
bash/strings/: parameter_expansion.sh  regex.sh
bash/tools/: AWK.md  awk.sh  sed_xargs.sh
cpp/: CLAUDE.md
cpp/classes/: crtp.cpp  inheritance.cpp  rule_of_five.cpp
cpp/cmake/: CMAKE.md  CMakeLists.txt
cpp/concurrency/: async.cpp  atomics.cpp  threads.cpp
cpp/memory/: move_semantics.cpp  raii.cpp  smart_pointers.cpp
cpp/modern/: lambdas.cpp  structured_bindings.cpp  type_system.cpp
cpp/stl/: algorithms.cpp  containers.cpp  ranges.cpp
cpp/templates/: basics.cpp  concepts.cpp  variadic.cpp
dart-flutter/: CLAUDE.md
dart-flutter/async/: advanced_async.dart  futures.dart  isolates.dart  streams.dart
dart-flutter/classes/: abstract_interfaces.dart  factories.dart  generics.dart  mixins.dart  sealed.dart
dart-flutter/collections/: iterables.dart  list_ops.dart  map_set.dart  spreads.dart
dart-flutter/flutter/animations/: explicit.dart  hero.dart  implicit.dart
dart-flutter/flutter/layout/: constraints.dart  custom_painter.dart  slivers.dart
dart-flutter/flutter/navigation/: go_router_example.dart  navigator2.dart
dart-flutter/flutter/state/: bloc_example.dart  provider_example.dart  riverpod_example.dart
dart-flutter/flutter/widgets/: inherited_widget.dart  stateful.dart  stateless.dart
dart-flutter/functions/: closures.dart  extensions.dart  higher_order.dart  tear_offs.dart  typedefs.dart
dart-flutter/patterns/: design_patterns.dart  functional.dart  pattern_matching.dart  records.dart
dart-flutter/pubspec/: example_pubspec.yaml  pubspec.md  versioning.md
dart-flutter/types/: extension_types.dart  generics_advanced.dart  null_safety.dart  type_system.dart
kotlin/: CLAUDE.md
kotlin/class/: basics.kt  data_classes.kt  delegation.kt  generics.kt  sealed_classes.kt  value_classes.kt
kotlin/collections/: operations.kt  sequences.kt
kotlin/coroutines/: COROUTINES.md  basics.kt  flows.kt
kotlin/fun/: basics.kt  extensions.kt  inline_functions.kt  lambdas.kt  scope_functions.kt
kotlin/gradle/: GRADLE.md  build.gradle.kts  libs.versions.toml  settings.gradle.kts
kotlin/patterns/: dsl.kt  functional.kt
kotlin/types/: nullability.kt  type_system.kt
